[feat] versaion up , fix next tail